[package]
name = "pleme-service-foundation"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Service foundation library for Pleme platform - bootstrap, health checks, graceful shutdown"
repository = "https://github.com/pleme-io/pleme-service-foundation"
homepage = "https://github.com/pleme-io/pleme-service-foundation"
readme = "README.md"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-gzip", "timeout", "trace"] }
http = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
chrono = "0.4"
pleme-config = { git = "https://github.com/pleme-io/pleme-config" }
pleme-error = { git = "https://github.com/pleme-io/pleme-error", optional = true }

[dev-dependencies]
tokio-test = "0.4"
reqwest = "0.11"

[features]
default = []
errors = ["pleme-error"]
full = ["errors"]


